@@ -1,4 +1,4 @@
-= styles_for :campaign
+= styles_for :task
 
 #confirm{ hidden }
 .title_tools#menu
