@@ -8,13 +8,13 @@ if @task.valid?
 
     # Show flash if assigned to somebody else from the [Pending Tasks] page.
     if @view == "pending" && @task.assigned_to?
-      page[:flash].update "The task has been created and assigned to #{@task.assignee.full_name} (" << link_to("view assigned tasks", url_for(:view => "assigned")) << ")."
-      page[:flash].show
+      page[:tasks_flash].update "The task has been created and assigned to #{@task.assignee.full_name} (" << link_to("view assigned tasks", url_for(:view => "assigned")) << ")."
+      page[:tasks_flash].show
 
     # Show flash if assigned to current user from the [Assigned Tasks] page.
     elsif @view == "assigned" && !@task.assigned_to?
-      page[:flash].update "The task has been created (" << link_to("view pending tasks", tasks_url) << ")."
-      page[:flash].show
+      page[:tasks_flash].update "The task has been created (" << link_to("view pending tasks", tasks_url) << ")."
+      page[:tasks_flash].show
 
     # Show newly created task by inserting its div into appropriate bucket
     # then update tasks sidebar.
