@@ -1,11 +1,5 @@
-page[:flash].hide if params[:related].blank?
+page << 'if ($("tasks_flash")) { $("tasks_flash").hide(); }'
 if params[:cancel] != "true"
-  page[:create_task_arrow].replace_html "&#9660;"
-  page[:create_task_title].replace_html(@view == "assigned" ? "Assign Task" : "Create Task")
   page[:create_task].replace_html :partial => "create"
-  page << "Effect.toggle('create_task', 'blind', { duration: 0.3, afterFinish: function() { $('task_name').focus(); } });"
-else                                                    # hide
-  page[:create_task_arrow].replace_html "&#9658;"
-  page[:create_task_title].replace_html(@view == "assigned" ? "Assigned Tasks" : "Tasks")
-  page << "Effect.toggle('create_task', 'blind', { duration: 0.3 });"
 end
+page.call "crm.flip_form", :create_task
