@@ -7,6 +7,7 @@ then you win. –- Mahatma Gandhi
 Wed, Apr 1, 2009
 ---------------------------------------------------------------------
 - Finished [Edit Lead] views and view specs.
+- Started with [Edit Task] form and related views.
 
 Tue, Mar 31, 2009
 ---------------------------------------------------------------------
